Current Version: @VERSION@

ctags-@VERSION@ (@DATE@)
* Don't parse comments after import statements and other tags, contributed by Huandari Lopez to Geany [Python].
* Fixed PHP parser to ignore keywords inside comments [PHP, Bug #1795926].
* Adjusted regexes for Ant so they won't span multiple tags [Ant].

ctags-5.8 (09 Jul 2009)
* Removed ".ml" as a Lisp extension (now OCaml) [Lisp].
* Added support for Ant language, contributed by David Fishburn.
* Added support for DOS Batch language, contributed by David Fishburn.
* Added support for Flex (Adobe) language, contributed by David Fishburn.
* Added support for MATLAB language, contributed by David Fishburn.
* Added support for Objective Camel (OCaml), provided by Vincent Berthoux [Patch #2738723].
* Added support for TeX language, contributed by David Fishburn.
* Added support for VHDL language, contributed by Nicolas Vincent [Bug #1943306].
* Added support for Pyrex/Cython declarations [Python].
* Added support for "v" kind, for variables [Python].
* Added support for class and member variables [PHP, Bug #1037086].
* Added support for recent enhancements to Eiffel language [Eiffel].
* Added support for ASP classes, contributed by Zendhi Nagao; changes meaning of 'c' kind flag [ASP].
* Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
* Fixed detection of triple strings inside other strings [Python, Bug #1988130].
* Fixed an endless loop with comments in triple strings [Python, Bug #1988027].
* Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].
* Fixed parsing of method parameter annotations, fix contributed by Paolo "blaisorblade" Giarrusso [Java, Bug #2049723, #2117073].
* Fixed parsing of global scope qualifiers in base class lists [C++, Bug #1799343].
* Fixed bug where namespace members were given kinds corresponding to globals [C++, Bug #1924919, #1575055].
* Fixed parsing of "else" [C#, Bug #1830344].